--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.14.8",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-ddp": "^3.0.0",
+    "apollo-link-error": "^1.1.13",
     "bcrypt": "^5.0.1",
+    "graphql": "^15.5.1",
+    "graphql-load": "^0.1.1",
+    "graphql-tools": "^8.1.0",
     "meteor-node-stubs": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
